# harness-conductor

./: .gitignore  Cargo.toml  README.md  conductor.toml
.docs/ai/: current-state.md  decisions.md  roadmap.md
.docs/ai/phases/: adversarial-design-review-report.md  adversarial-design-review-spec.md  arena-harness-scorecard-plan.md  arena-harness-scorecard-spec.md  bounded-dispatch-approval-report.md  bounded-dispatch-approval-spec.md  conductor-v1-spec.md  openwiki-pilot-spec.md  provider-trust-integration-report.md  provider-trust-integration-spec.md  roster-router-refactor-spec.md  roster-tui-phase1-plan.md  roster-tui-spec.md
docs/notes/: agy-dispatch.md  bd-readonly.md  orchestrator-recon.md
docs/superpowers/plans/: 2026-07-13-adversarial-design-review.md  2026-07-13-bounded-dispatch-approval.md  2026-07-13-provider-trust-integration.md
src/: adversarial.rs  arena.rs  bd.rs  bursar.rs  cli.rs  config.rs  cycle.rs  deck.rs  dispatch.rs  dispatch_cycle.rs  fields.rs  ledger.rs  main.rs  plan.rs  quarantine.rs  ratchet.rs  roster_drift.rs  route.rs  run.rs  scan.rs  state.rs  triage.rs  verify.rs
templates/: worker-prompt.md
tests/: worker_prompt.rs
tests/fixtures/: bd-blocked-all-blocked.json  bd-blocked-with-items.json  bd-claim-output.json  bd-close-output.json  bd-comment-output.json  bd-count-zero.json  bd-ready-with-items.json  bd-release-output.json  bd-set-metadata-output.json  bd-show-ready-meta.json  bursar-status-v2.json  conductor-0kc-auth-loss.json  scorecard-agreement.md  scorecard-ceiling-mismatch.md  scorecard-extra-in-config.md  scorecard-missing-from-config.md  scorecard-tier-mismatch.md  scorecard-unparseable.md
