[package]
name = "conductor"
version = "0.1.0"
edition = "2024"
description = "Fleet cycle runner: scan → triage → plan → dispatch → verify → report"
license = "MIT"
rust-version = "1.85"

[[bin]]
name = "conductor"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
fs2 = "0.4"
libc = "0.2"
nix = { version = "0.30", features = ["process", "socket"] }
sha2 = "0.10"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common false positives in application code
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
